# ChangeLog for media-fonts/terminus-font
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.68 2009/01/12 04:25:00 jer Exp $

  12 Jan 2009; Jeroen Roovers <jer@gentoo.org> terminus-font-4.28.ebuild:
  Stable for HPPA (bug #252648).

  07 Jan 2009; Raúl Porcel <armin76@gentoo.org> terminus-font-4.28.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #252648

  02 Jan 2009; Torsten Veller <tove@gentoo.org> terminus-font-4.28.ebuild:
  Stable on x86 (#252648)

  30 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  terminus-font-4.28.ebuild:
  Stable on sparc, bug #252648

  28 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  terminus-font-4.28.ebuild:
  ppc stable, bug #252648

  27 Dec 2008; Brent Baude <ranger@gentoo.org> terminus-font-4.28.ebuild:
  stable ppc64, bug 252648

  27 Dec 2008; Jeremy Olexa <darkside@gentoo.org> terminus-font-4.28.ebuild:
  amd64 stable, bug 252648

*terminus-font-4.28 (06 Oct 2008)

  06 Oct 2008; Peter Volkov <pva@gentoo.org> metadata.xml,
  -terminus-font-4.26-r2.ebuild, +terminus-font-4.28.ebuild:
  Version bump, bug #238415 reported by Arfrever Frehtes Taifersar Arahesis.
  Fixes missing glyph problem, bug #233363, reported by Alexey Charkov.
  Added +pcf, +psf and raw USE flags so now you can select what font formats
  you are interested in, fixes bug #228793 reported by Nikita Ofitserov.
  Removed broken ebuild.

  17 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*terminus-font-4.26-r2 (22 Jun 2008)

  22 Jun 2008; Peter Volkov <pva@gentoo.org> -terminus-font-4.26-r1.ebuild,
  +terminus-font-4.26-r2.ebuild:
  Fixed typo in USE flag for terminus font: qoute -> quote, bug #228813,
  thank Franz Metz for report. Added RDEPEND to avoid implicit
  RDEPEND=DEPEND.

  21 Jun 2008; Peter Volkov <pva@gentoo.org> terminus-font-4.26-r1.ebuild: