@@ -10,6 +10,6 @@ DIST terminus-font-4.28-kx3-ij1.diff.gz 1340 RMD160 0a50624e891ef10810aaee085705
 DIST terminus-font-4.28-kx3-ka2.diff.gz 961 RMD160 3ff191fdc2766197ead773b473e84e97b0a0b6c5 SHA1 58e487f0dd2173765f341b33f8d0774bb1c1e81e SHA256 a2b5184217562a66ed303f8063a4e63ba4bca03589b82ba777fc29b1e83fc408
 DIST terminus-font-4.28-kx3.diff.gz 3242 RMD160 18aae71374d196ed3d4049594fb520d7a5ae1d75 SHA1 0fa9a31c971e98c0d7282798a610552c1b208df2 SHA256 fb4776c6dcb31b17d2ae020af2e928c5c2d06c5f800201b9d2ed75131ded3804
 DIST terminus-font-4.28.tar.gz 229336 RMD160 79bc8e60c660cf166825974dd76e5a3772131ac4 SHA1 5134a39dd6f50f07e77d20e0718fe8cd00cc16b4 SHA256 1e8010ded51141d26ec0bb9bea70cc1360d27d562b80ca7c2dcbf3fef90fb20f
-EBUILD terminus-font-4.28.ebuild 3314 RMD160 d792454e3bb198485355cf47c7c4102686512608 SHA1 214e343867a77e53cd23ce30e3ae72d8b73ed309 SHA256 b96eeec728c5d31b692293fa9088f70f6e9e5cb8a35fd81db157a645117233be
-MISC ChangeLog 9451 RMD160 95d49de3e3e4559b8ff851b26644f82c3aad3a3f SHA1 5b1ab7390a5cbb6bc563399697ae4e1ecf0b02d8 SHA256 498ceb0984ac86bdcf584bd8ff50cdaf648cfc83e27e492d337eb12803e508e4
-MISC metadata.xml 1199 RMD160 2722da09e53d59531b53a704dd618b5146bbb9f5 SHA1 2f334c73dae703c879b83f1bd4f6c4e6c8474c87 SHA256 b7f30ade029480c63b246444254439667e6aeb78c026ce64fb154ff2d18fd5d9
+EBUILD terminus-font-4.28.ebuild 3344 RMD160 10abbda0aaef189cc82d58ff9d35141459cdc3ea SHA1 db63f09d86e7465798c173ff4908c0b5b34bb692 SHA256 dc053dc3371077df40d842fa85a80e92984ca375e8ae35b88cdb1bb69f29b41a
+MISC ChangeLog 9678 RMD160 7e0d806595df407f9efd6ba5e5ca3dcc2dd7d46a SHA1 b01784425518784296a2564f0235c1167476221e SHA256 18f6dfb5d2f83039d26821207acf0c0329d8c393470d8e9e012ac57ee406882d
+MISC metadata.xml 1209 RMD160 648af213e6fb7cf5534a70321f9503880cf3c83c SHA1 080bfa0f77967db05f7a7e573def6ffcb54de3e4 SHA256 b1ca206f987ec5775072d0ae38430cd791b2a0aec156a56eeb9a6d7870220aa7
