@@ -5,8 +5,8 @@
 <use>
 	<flag name='psf'>Install PC Screen Font (PSF) with unicode data (for linux
 		console)</flag>
-	<flag name='raw'>Install RAW font data which should be compatible with most
-	UNIX systems (you don't need this on linux)</flag>
+	<flag name='raw-font-data'>Install RAW font data which should be compatible
+	with most UNIX systems (you don't need this on linux)</flag>
 	<flag name='pcf'>Intall Portable Compiled Font (PCF) (required for X11)</flag>
 	<flag name='a-like-o'>Changes view of letter 'a' - a looks like o
 		(see homepage)</flag>
